--- a/styles.css
+++ b/styles.css
@@ -1241,8 +1241,22 @@ ul{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: auto;
+    height: fit-content;
     gap: 8%;
+}
+
+.spaceSB{
+    height: 50%;
+    padding-top: 15px;
+}
+
+.txtCOAS{
+    color: black;
+    font-weight: bold;
+    font-family: "Poppins", Helvetica, sans-serif;
+    cursor: pointer;
+    text-decoration: none;
+    width: 80%;
 }
 
 .txtCOA{
@@ -1252,9 +1266,15 @@ ul{
     cursor: pointer;
     text-decoration: none;
     width: 80%;
+    padding-top: 15px;
 }
 
 .txtCOA:hover{
+    color: #005e87;
+    cursor: pointer;
+}
+
+.txtCOAS:hover{
     color: #005e87;
     cursor: pointer;
 }
@@ -1266,7 +1286,7 @@ ul{
     align-items: center;
     font-weight: bold;
     width: 200px;
-    height: 50%;
+    height: 100%;
     justify-content: center;
     font-family: "Poppins", Helvetica, sans-serif;
 }
